# wakemypc-desktop

./: README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: release.yml
src/pico_gui/: main.py  serial_connection.py
src/wakemypc_desktop/: main.py  serial_connection.py
